# cluster_colors

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  pyrightconfig.json  race_stacking.py  setup.py  temp.py  tox.ini
cluster_colors/: bbox.py  cluster_rgb.py  clusters.py  cut_colors.py  distance_matrix.py  image_colors.py  median_cut.py  paths.py  pool_colors.py  reduce_colors.py  rgb_members_and_clusters.py  stack_colors.c  stack_colors.py  stack_colors.pyx  stack_vectors.py  stacked_quantile.py  type_hints.py  weighted_average.py  weighted_median.py
pickle/: sugar-shack-barnes-512.pkl
src/cluster_colors/: __init__.py  cluster_cluster.py  cluster_member.py  cluster_members.py  cluster_supercluster.py  clusters.py  cut_colors.py  distance_matrix.py  image_colors.py  kmedians.py  paths.py  pool_colors.py  stack_vectors.py  stacked_quantile.py  tracers.py  type_hints.py  vector_stacker.py
test/: conftest.py  test_cluster_rgb.py  test_cut_colors.py  test_pool_colors.py  test_reduce_colors.py  test_stack_colors.py  test_stacked_quantile.py  test_weighted_average.py
tests/: __init__.py  test_cluster_rgb.py  test_clusters_types.py  test_cut_colors.py  test_image_colors.py  test_kmedians.py  test_pca.py  test_pool_colors.py  test_split_floats.py  test_stack_colors.py  test_stacked_quantile.py
typings/lxml/: _elementpath.pyi  builder.pyi  doctestcompare.pyi  etree.cp310-win32.pyi  objectify.cp310-win32.pyi  sax.pyi
typings/lxml/html/: __init__.pyi
typings/numpy/: __config__.pyi  __init__.pyi  conftest.pyi  matlib.pyi
(+34 files in other folders)
